SB-296 Changes to inspection behavior
